--- a/index.html
+++ b/index.html
@@ -48,14 +48,13 @@
             let url = 'https://chinbs.chi.com.tw:760/twWebAPI/LinkCall?progid=arSellInvoice&methodName=RecUrl&sign=D3EF49F91F6DD40283D2A07356D582C17128E0A7996FC764702781EA56E5D14F&paramInfo=08e4c91df25a4dc1eyJCaWxsTm8iOiJGQzIwMjMxMDIwMDAxMyIsImFwaUV4cCI6MTQ3MTUwNjkxOH0';
 
             $.ajax({
-                type: "get",//
-                url: url,
+                type: "get",
+                url: 'https://chinbs.chi.com.tw:760/twWebAPI/LinkCall?progid=arSellInvoice&methodName=RecUrl&sign=D3EF49F91F6DD40283D2A07356D582C17128E0A7996FC764702781EA56E5D14F&paramInfo=08e4c91df25a4dc1eyJCaWxsTm8iOiJGQzIwMjMxMDIwMDAxMyIsImFwaUV4cCI6MTQ3MTUwNjkxOH0',
                 dataType: "jsonp", // 使用JSONP
                 jsonp: "callback", // JSONP回調函數名稱
                 success: function (data) {
                     // 將載入的資料顯示在 dataContainer 元素中
                     console.log(data);
-                    console.log(queryString);
                     if (data.httpCode == '200') {
                         let jsonString = JSON.stringify(data.httpMessage);
                         jsonString = jsonString.replace(/"/g, '');
@@ -68,6 +67,8 @@
                     $(".msg").html("載入資料失敗：" + error.statusText);
                 }
             });
+
+                
         });
         });
     </script>
