--- a/index.html
+++ b/index.html
@@ -47,28 +47,29 @@
             // 获取URL中的查询字符串
             let url = 'https://chinbs.chi.com.tw:760/twWebAPI/LinkCall?progid=arSellInvoice&methodName=RecUrl&sign=D3EF49F91F6DD40283D2A07356D582C17128E0A7996FC764702781EA56E5D14F&paramInfo=08e4c91df25a4dc1eyJCaWxsTm8iOiJGQzIwMjMxMDIwMDAxMyIsImFwaUV4cCI6MTQ3MTUwNjkxOH0';
 
+            $(".OnClick").on("click", function () {
+            // 获取URL中的查询字符串
+            let url = 'https://chinbs.chi.com.tw:760/twWebAPI/LinkCall?progid=arSellInvoice&methodName=RecUrl&sign=D3EF49F91F6DD40283D2A07356D582C17128E0A7996FC764702781EA56E5D14F&paramInfo=08e4c91df25a4dc1eyJCaWxsTm8iOiJGQzIwMjMxMDIwMDAxMyIsImFwaUV4cCI6MTQ3MTUwNjkxOH0';
+
             $.ajax({
                 type: "get",
-                url: 'https://chinbs.chi.com.tw:760/twWebAPI/LinkCall?progid=arSellInvoice&methodName=RecUrl&sign=D3EF49F91F6DD40283D2A07356D582C17128E0A7996FC764702781EA56E5D14F&paramInfo=08e4c91df25a4dc1eyJCaWxsTm8iOiJGQzIwMjMxMDIwMDAxMyIsImFwaUV4cCI6MTQ3MTUwNjkxOH0',
-                dataType: "jsonp", // 使用JSONP
-                jsonp: "callback", // JSONP回調函數名稱
+                url: url,
+                dataType: "json", // 使用JSON格式
                 success: function (data) {
-                    // 將載入的資料顯示在 dataContainer 元素中
+                    // 将加载的数据显示在 dataContainer 元素中
                     console.log(data);
                     let jsonString = JSON.stringify(data.httpMessage);
                     jsonString = jsonString.replace(/"/g, '');
                     $(".msg").text(jsonString);
                 },
                 error: function (error) {
-                    // 如果 AJAX 請求失敗，顯示錯誤信息
+                    // 如果 AJAX 请求失败，显示错误信息
                     console.log(error);
                     $(".msg").html("載入資料失敗：" + error.statusText);
                 }
             });
-
-                
         });
-        });
+    });
     </script>
 </body>
 </html>
