--- a/index.html
+++ b/index.html
@@ -1,71 +1,78 @@
-<html>
-<head>
-    <meta charset="UTF-8">
+<%@ Page Language="vb" AutoEventWireup="false" CodeBehind="chiR.aspx.vb" Inherits="WebApplication4.WebForm1" %>
+
+<!DOCTYPE html>
+
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head runat="server">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>正航資訊股份有限公司</title>
     <style>
-        /* 添加按鈕的 CSS 样式 */
-        body
-        {
+        body {
+            background-image: url('images/background.png');
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-position: center;
+            background-size: cover;
         }
-        .msg{
-            font-family: Microsoft JhengHei;
 
+        .msg {
+            font-family: Microsoft JhengHei;
             font-size: 2.7vw; /* 设置字体大小 1em=12 45px*/
             position: absolute;
             top: 23%; /* 将 <p> 元素垂直居中定位 */
             left: 15.5%; /* 将 <p> 元素水平居中定位 */
-            font-weight:bold;
+            font-weight: bold;
         }
+
         button {
             height: 30px;
             width: 50px;
         }
-        .title
-        {
+
+        .title {
             font-family: Microsoft JhengHei;
             font-size: 2.7vw; /* 设置字体大小 */
             position: absolute;
             top: 13%; /* 将 <p> 元素垂直居中定位 */
             left: 15.5%; /* 将 <p> 元素水平居中定位 */
-            font-weight:bold;
+            font-weight: bold;
         }
     </style>
 </head>
 <body>
-    
-    
-    <div class="main">
-        <button type="button" class="OnClick">顯示</button>
-    </div>
-    <p class="title">親愛的客戶 您好</p>
-    <p class="msg">正航資訊已收到您的電子發票回訊，謝謝您的配合</p>
+    <form id="form1" runat="server">
+        <div class="main">
+            <asp:Button ID="OnClick1" runat="server" Text="顯示" OnClientClick="GetIPAddress(); return false;" />
+        </div>
+        <p class="title">親愛的客戶 您好</p>
+        <p class="msg">正航資訊已收到您的電子發票回訊，謝謝您的配合</p>
+    </form>
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <script>
-        $(document).ready(function () {
-    // 當文件載入完成後，設置按鈕的點擊事件
-            $(".OnClick").on("click", function () {
-                // 获取URL中的查询字符串
-                let url = 'http://nbsdemo.chi.com.tw:8009/twWebAPI/LinkCall?progid=X_twAPIInterfaceParam&methodName=TestReCAll&sign=4B96B7279EF8BE1C409F962BA2F5537EDC6FA37E29B1E828D88418CFAC399D06&paramInfo=ae3df95cdc374eebeyJQYXJhbTEiOiJQYXJhbTEiLCJQYXJhbTIiOiJQYXJhbTIiLCJhcGlFeHAiOjE0NzIxNjMxNDN9';
-                //https://chinbs.chi.com.tw:760/twWebAPI/LinkCall?progid=arSellInvoice&methodName=RecUrl&sign=D3EF49F91F6DD40283D2A07356D582C17128E0A7996FC764702781EA56E5D14F&paramInfo=08e4c91df25a4dc1eyJCaWxsTm8iOiJGQzIwMjMxMDIwMDAxMyIsImFwaUV4cCI6MTQ3MTUwNjkxOH0
-                $.ajax({
-                    type: "get",
-                    url: url,
-                    dataType: "text", // 使用JSON格式
-                    success: function (data) {
-                        // 将加载的数据显示在 dataContainer 元素中
-                        console.log(data);
-                        let jsonString = JSON.stringify(data);
-                        jsonString = jsonString.replace(/"/g, '');
-                        $(".msg").text(jsonString);
-                    },
-                    error: function (error) {
-                        // 如果 AJAX 请求失败，显示错误信息
-                        console.log(error);
-                        $(".msg").html("載入資料失敗：" + error.statusText);
-                    }
-                });
+        //$(function () {
+        //    $.getJSON("https://api.ipify.org?format=jsonp&callback=?",
+        //        function (json) {
+        //            //document.write("My public IP address is: ", json.ip);
+        //            $(".msg").text(json.ip);
+        //        }
+        //    );
+        //});
+            $.ajax({
+                type: "get",
+                //url: 'https://chinbs.chi.com.tw:760/twWebAPI/LinkCall?progid=arSellInvoice&methodName=RecUrl&sign=D3EF49F91F6DD40283D2A07356D582C17128E0A7996FC764702781EA56E5D14F&paramInfo=08e4c91df25a4dc1eyJCaWxsTm8iOiJGQzIwMjMxMDIwMDAxMyIsImFwaUV4cCI6MTQ3MTUwNjkxOH0',
+                url: 'http://nbsdemo.chi.com.tw:8009/twWebAPI/LinkCall?progid=X_twAPIInterfaceParam&methodName=TestReCAll&sign=4B96B7279EF8BE1C409F962BA2F5537EDC6FA37E29B1E828D88418CFAC399D06&paramInfo=ae3df95cdc374eebeyJQYXJhbTEiOiJQYXJhbTEiLCJQYXJhbTIiOiJQYXJhbTIiLCJhcGlFeHAiOjE0NzIxNjMxNDN9',
+                dataType: "text", // 使用JSONP
+                success: function (data) {
+                    // 將載入的資料顯示在 dataContainer 元素中
+                    console.log(data);
+                    $(".msg").text(data);
+                },
+                error: function (error) {
+                    // 如果 AJAX 請求失敗，顯示錯誤信息
+                    console.log(error);
+                    $(".msg").html("載入資料失敗：" + error.statusText);
+                }
             });
-        });
     </script>
 </body>
 </html>
